--- a/payment-service/src/main/resources/application.properties
+++ b/payment-service/src/main/resources/application.properties
@@ -1,1 +1,19 @@
 spring.application.name=payment-service
+spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/XEPDB1
+spring.datasource.username=CARBNB
+spring.datasource.password=1234
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+
+server.error.include-message=always
+
+server.port=0
+
+server.servlet.context-path=/payment-app
+eureka.client.service-url.defaultZone = http://localhost:5000/eureka
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+
+stripe.webhook.secret=...
+stripe.secret-key=...
